--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --main-bg: #34495e;
+  --text: #fff;
+  --completed: #1abc9c;
+  --uncompleted: #e74c3c;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  margin: 55px auto;
+  border-radius: 5%;
+  padding: 0px 0px 10px 0px;
+  width: 500px;
+  background-color: transparent;
+  border: 2px solid var(--completed);
+}
+
+body {
+  background-color: var(--main-bg);
+  color: var(--text);
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  padding-top: 40px;
+  font-size: x-large;
+}
+
+button {
+  margin: 15px;
+  background-color: transparent;
+  font-size: x-large;
+  border: none;
+  border-radius: 50%;
+  text-align: right;
+}
+
+button:hover {
+  border-radius: 50%;
+  background-color: #495a6a;
+  cursor: pointer;
+}
+
+input {
+  background-color: var(--text);
+  border-radius: 15px;
+  height: 30px;
+  width: 150px;
+  margin-top: 15px;
+  text-align: center;
+  border: none;
+  caret-color: #34495e;
+}
+
+input:focus {
+  outline: none;
+}
+
+.questionArea {
+  margin-top: 15px;
+}
+.inputArea {
+  margin-top: 5px;
+}
+.sentenceArea {
+  margin-top: 15px;
 }
